<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.android.fuzzer.squibble.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button android:id="@+id/btn_AddIntent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_AddIntent" >
            </Button>

            <CheckBox
                android:id="@+id/chk_InputRange"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <EditText android:id="@+id/edt_InputRange"
                android:lines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inputField"
                android:enabled="false">
            </EditText>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_lbl0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lbl_Target"
                    android:text="@string/lbl_Target"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_span="1" />

                <Spinner
                    android:id="@+id/spn_Target"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_lbl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lbl_Types"
                    android:text="@string/lbl_Types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_span="1" />

                <TextView
                    android:id="@+id/lbl_FuzzTypes"
                    android:text="@string/lbl_FuzzType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_span="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_spn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >
                <Spinner
                    android:id="@+id/spn_Type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <Spinner
                    android:id="@+id/spn_FuzzType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:text="@string/lbl_Actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_Actions" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spn_Intent" />

        <!-- First row of command buttons (3) -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/btn_FuzzSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_FuzzSingle"
                android:layout_weight="1" />

            <Button
                android:text="@string/btn_FuzzAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_FuzzAll"
                android:layout_weight="1" />

            <Button
                android:text="@string/btn_RunAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_RunAll"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Second row of command buttons (1) -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/btn_Clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_Clear"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:text="@string/lbl_Output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <EditText android:id="@+id/comp"
            android:lines="1"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </EditText>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text=""
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/output" />
        </ScrollView>

    </LinearLayout>


</RelativeLayout>
